[gd_scene load_steps=21 format=1]

[ext_resource path="res://script/Effect_Ulty.gd" type="Script" id=1]
[ext_resource path="res://image/umbrella_1.tex" type="Texture" id=2]
[ext_resource path="res://image/umbrella_2.tex" type="Texture" id=3]
[ext_resource path="res://image/umbrella_3.tex" type="Texture" id=4]
[ext_resource path="res://image/umbrella_4.tex" type="Texture" id=5]
[ext_resource path="res://image/umbrella_5.tex" type="Texture" id=6]
[ext_resource path="res://image/umbrella_6.tex" type="Texture" id=7]
[ext_resource path="res://image/umbrella_7.tex" type="Texture" id=8]
[ext_resource path="res://image/umbrella_10.tex" type="Texture" id=9]
[ext_resource path="res://image/umbrella_11.tex" type="Texture" id=10]
[ext_resource path="res://image/umbrella_8.tex" type="Texture" id=11]
[ext_resource path="res://image/umbrella_9.tex" type="Texture" id=12]
[ext_resource path="res://sound/umbrella_wooshes.wav" type="Sample" id=13]

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( 20.6438, 124.068, -10.9962, 136.826, -19.1614, 116.923, -18.6511, 92.4278, 51.7736, 101.614 )

[sub_resource type="ConvexPolygonShape2D" id=10]

custom_solver_bias = 0.0
points = Vector2Array( -12.5272, -91.2887, -14.5685, -106.598, -6.40334, -121.398, 23.1954, -109.66, 52.2839, -87.7164 )

[sub_resource type="ConvexPolygonShape2D" id=11]

custom_solver_bias = 0.0
points = Vector2Array( 91.0685, 41.9057, 74.2278, 74.0561, 51.7736, 101.614, -18.6511, 92.4278, -23.244, 63.8497, -17.6304, 34.2509, 99.2336, 8.2244 )

[sub_resource type="ConvexPolygonShape2D" id=12]

custom_solver_bias = 0.0
points = Vector2Array( 91.5788, -26.9879, 99.2336, 8.2244, -17.6304, 34.2509, -21.713, 10.776, -18.6511, -16.7815, 74.7381, -61.6899 )

[sub_resource type="ConvexPolygonShape2D" id=13]

custom_solver_bias = 0.0
points = Vector2Array( 52.2839, -87.7164, 74.7381, -61.6899, -18.6511, -16.7815, -22.2233, -55.566, -12.5272, -91.2887 )

[sub_resource type="SpriteFrames" id=14]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "rotate",
"speed": 20.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "shooo",
"speed": 15.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 9 ) ],
"loop": false,
"name": "pop_up",
"speed": 30.0
} ]

[sub_resource type="SampleLibrary" id=15]

samples/umbrella_wooshes = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}

[node name="Umbrella_effect" type="RigidBody2D"]

transform/pos = Vector2( 108.308, 180.823 )
input/pickable = false
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1.3, 0, 0, 1.3, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 10 )
shapes/1/transform = Matrix32( 1.3, 0, 0, 1.3, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 11 )
shapes/2/transform = Matrix32( 1.3, 0, 0, 1.3, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 12 )
shapes/3/transform = Matrix32( 1.3, 0, 0, 1.3, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 13 )
shapes/4/transform = Matrix32( 1.3, 0, 0, 1.3, 0, 0 )
shapes/4/trigger = false
collision/layers = 1
collision/mask = 1
mode = 3
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = true
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
SPEED = 200
Y_OFFSET = 40
VIBRATE_RATE = 350

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 1.3, 1.3 )
frames = SubResource( 14 )
animation = "pop_up"
frame = 3
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

transform/scale = Vector2( 1.3, 1.3 )
build_mode = 0
polygon = Vector2Array( -6.40334, -121.398, 23.1954, -109.66, 52.2839, -87.7164, 74.7381, -61.6899, 91.5788, -26.9879, 99.2336, 8.2244, 91.0685, 41.9057, 74.2278, 74.0561, 51.7736, 101.614, 20.6438, 124.068, -10.9962, 136.826, -19.1614, 116.923, -18.6511, 92.4278, -23.244, 63.8497, -17.6304, 34.2509, -21.713, 10.776, -18.6511, -16.7815, -22.2233, -55.566, -12.5272, -91.2887, -14.5685, -106.598 )
shape_range = Vector2( 0, 4 )
trigger = false

[node name="Interval_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="To_move_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.01
one_shot = true
autostart = false

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 15 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_finished"]

[connection signal="timeout" from="Interval_timer" to="." method="_on_Interval_timer_timeout"]

[connection signal="timeout" from="To_move_timer" to="." method="_on_To_move_timer_timeout"]


